[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "change_point_algorithms"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"

dependencies = [
#    "kaleido", # need it for saving plots from plotly
    "matplotlib", # plotting library
    "maturin",
    "more_itertools",
    "numba", # speeding up some python functions
    "numpy",
    "pandas", # table representation
#    "plotly", # plotting library
    "scikit-learn",
    "scipy",
    "ruptures", # offline change point detection
    "tomlkit"
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-benchmark"
]
profiling = [
    "line_profiler",
    "snakeviz",
    "jinja2"
]
progress = [
    "tqdm" # progress bars
]