[package]
name = "change_point_algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "change_point_algorithms"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
statrs = "0.18.0"

[dev-dependencies]
criterion = "0.5.1"
